; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_rtmpproto.c_rtmp_validate_digest.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_rtmpproto.c_rtmp_validate_digest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTMP_HANDSHAKE_PACKET_SIZE = common dso_local global i32 0, align 4
@rtmp_server_key = common dso_local global i32 0, align 4
@SERVER_KEY_OPEN_PART_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @rtmp_validate_digest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtmp_validate_digest(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [32 x i32], align 16
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = add nsw i32 %11, 4
  %13 = call i32 @ff_rtmp_calc_digest_pos(i32* %9, i32 %10, i32 728, i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @RTMP_HANDSHAKE_PACKET_SIZE, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @rtmp_server_key, align 4
  %18 = load i32, i32* @SERVER_KEY_OPEN_PART_LEN, align 4
  %19 = getelementptr inbounds [32 x i32], [32 x i32]* %6, i64 0, i64 0
  %20 = call i32 @ff_rtmp_calc_digest(i32* %14, i32 %15, i32 %16, i32 %17, i32 %18, i32* %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* %7, align 4
  store i32 %24, i32* %3, align 4
  br label %36

25:                                               ; preds = %2
  %26 = getelementptr inbounds [32 x i32], [32 x i32]* %6, i64 0, i64 0
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* %8, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = call i32 @memcmp(i32* %26, i32* %30, i32 32)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %35, label %33

33:                                               ; preds = %25
  %34 = load i32, i32* %8, align 4
  store i32 %34, i32* %3, align 4
  br label %36

35:                                               ; preds = %25
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %35, %33, %23
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @ff_rtmp_calc_digest_pos(i32*, i32, i32, i32) #1

declare dso_local i32 @ff_rtmp_calc_digest(i32*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
